build: Remove vdsbroker's tests' additional config
The additional configuration of the maven-surefire-plugin is a
remnant from the 3.1 days, and is no longer relevant.

At best, it's redundant, and at worst, it actually fails the build
with the early access Java 9.

Change-Id: I7bbed9deff019c0b1dc89584fbe34ba13bd74deb
Signed-off-by: Allon Mureinik <amureini@redhat.com>