@@ -106,20 +106,4 @@
       <version>${snakeyaml.version}</version>
     </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <additionalClasspathElements>
-            <additionalClasspathElement>${basedir}/src/test/java</additionalClasspathElement>
-          </additionalClasspathElements>
-          <argLine>-Dsun.lang.ClassLoader.allowArraySyntax=true</argLine>
-          <argLine>-Djava.endorsed.dirs='${jbossHome}/lib/endorsed'/</argLine>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
 </project>
